<resources>
    <string name="app_name">Laps</string>
    <string name="title_activity_maps">Map</string>
    <string name="imgLapsDescription">Vector image of splash screen</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="routeFragment">RouteFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routes">Routes</string>
    <string name="routeName">Route Name</string>
    <string name="bestTime">PR: 17:00</string>
    <string name="_2_3_km">2.30 KM</string>
    <string name="add">add</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="record_new_route">RECORD NEW ROUTE</string>
    <string name="start">Start</string>
    <string name="zeroTimer">0:00</string>
    <string name="finish">Finish</string>
    <string name="_3">3</string>
    <string name="none">none</string>
    <string name="confirm">Confirm</string>
    <string name="timeRecorded">Time: 17:00</string>
    <string name="_2300_m">2300 M</string>
    <string name="delete">Delete</string>
    <string name="show_best_time">New Best Time!</string>
</resources>