<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompletedRunFragment"
    android:background="@color/colorAccent">

    <EditText
        android:id="@+id/routeNameEdit"
        android:autofillHints="Route 1"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:fontFamily="sans-serif-medium"
        android:textSize="40sp"
        android:hint="@string/routeName"
        android:textColorHint="@color/colorPrimaryFade"
        android:maxLength="10"
        android:maxLines="1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/routeLengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="@color/black"
        android:shadowDx="0.5"
        android:shadowDy="0.5"
        android:shadowRadius="1"
        android:text="@string/_2300_m"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/routeNameEdit"
        app:layout_constraintStart_toStartOf="@+id/routeNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/routeNameEdit" />

    <TextView
        android:id="@+id/timeRecordedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/timeRecorded"
        android:textColor="@color/orange"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/routeLengthText"
        app:layout_constraintStart_toStartOf="@+id/routeLengthText"
        app:layout_constraintTop_toBottomOf="@+id/routeLengthText" />



    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/timeRecordedText"
        app:layout_constraintStart_toStartOf="@+id/timeRecordedText"
        app:layout_constraintTop_toBottomOf="@+id/timeRecordedText" />

</androidx.constraintlayout.widget.ConstraintLayout>