<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:minHeight="100dp">

    <TextView
        android:id="@+id/routeName"
        android:text="@string/routeName"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestTime"
        android:text="@string/bestTime"
        android:textSize="25sp"
        android:textColor="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeName"
        />

    <TextView
        android:id="@+id/routeLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_2_3_km"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="1"
        android:shadowDx="0.5"
        android:shadowDy="0.5"
        android:textSize="32sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bestTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/routeName"
        app:layout_constraintTop_toTopOf="@+id/routeName"/>



</androidx.constraintlayout.widget.ConstraintLayout>